// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultdb.config;

import "go.chromium.org/luci/resultdb/proto/config/scheme.proto";

option go_package = "go.chromium.org/luci/resultdb/proto/config;configpb";

// Config is the service-wide configuration data for Luci ResultDB.
message Config {
  // Control the export of artifact from BatchCreateArtifact.
  // Going to be deprecate soon.
  BqArtifactExportConfig bq_artifact_export_config = 1;

  // Control the export of artifact in the artifactexporter service.
  BqArtifactExportConfig bq_artifact_exporter_service_config = 2;

  // Test schemes supported by the deployment.
  repeated Scheme schemes = 3;
}

// BqArtifactExportConfig contains the configuration to export
// artifact content to BigQuery.
message BqArtifactExportConfig {
  // Whether the export to BigQuery is enabled.
  bool enabled = 1;
  // The percent of artifacts that should be exported to BigQuery.
  // This allows us to roll out the change incrementally.
  // This value must be an integer between [0, 100].
  int64 export_percent = 2;
}
